--- a/artwebsandroid/AndroidManifest.xml
+++ b/artwebsandroid/AndroidManifest.xml
@@ -5,19 +5,30 @@
     android:versionName="1.0" >
 
     <uses-sdk android:minSdkVersion="4" />
-
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"></uses-permission>
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        <uses-library android:name="android.test.runner" /> 
         <activity
             android:name="com.artwebsandroid.ArtwebsandroidActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".demo.ListActionActivity" android:label="列表"></activity>
+        <activity android:name=".demo.InfoActionActivity" android:label="详细"></activity>    
+        <activity android:name=".demo.UiActionActivity" android:label="界面"></activity>    
+        <activity android:name=".demo.InstallApkActivity" android:label="安装"></activity>    
+        <activity android:name=".demo.SelectActivity" android:label="界面"></activity>    
     </application>
+    <instrumentation android:name="android.test.InstrumentationTestRunner"
+          android:targetPackage="com.artwebsandroid"
+          android:label="your tests label" />
 
 </manifest>
