--- a/AndroidDemo/project.properties
+++ b/AndroidDemo/project.properties
@@ -11,5 +11,5 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-8
-android.library.reference.1=../artwebsandroid/artwebsandroid
+target=android-10
+android.library.reference.1=../artwebsandroid
