--- a/AndroidDemo/AndroidManifest.xml
+++ b/AndroidDemo/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".CameraActivity" android:label=""></activity>
         <activity android:name=".QRCodeActivity" android:label=""></activity>
         <activity android:name=".ScratchSardViewActivity" android:label=""></activity>
+        <activity android:name=".SingleChoiceActivity" android:label=""></activity>
     </application>
 
 </manifest>
